edit algo study 1

--- a/_posts/2020-10-30-AlgoStudy_01.md
+++ b/_posts/2020-10-30-AlgoStudy_01.md
@@ -59,7 +59,7 @@ lambda, map, filter, reduce
 
 ## 정렬된 리스트에서 특정 숫자가 들어갈 index 찾아내기
 
-''' python3
+~~~python
 def binarySearch (arr, start, end, target):
     # check condition
     if end >= start:
@@ -80,12 +80,12 @@ def binarySearch (arr, start, end, target):
 def solution(L, x):
     L.insert(binarySearch(L,0,len(L)-1,x),x)
     return L
-'''
+~~~
 
 ## try except 이용해서 리스트에서 원소 찾기 
 인자로 주어지는 리스트 L 내에서, 또한 인자로 주어지는 원소 x 가 발견되는 모든 인덱스를 구하여 이 인덱스들로 이루어진 리스트를 반환하는 함수이다. 
 
-'''python
+~~~python
 def solution(L, x):
     answer = []
     # 초기 배열에서의 인덱스를 보존하기 위한 변수 
@@ -106,40 +106,43 @@ def solution(L, x):
             return answer
     
     return answer
-'''
+~~~
+
 # 정렬
 
 ## 해당 리스트를 정렬할 것인가. 새로운 정렬된 리스트를 만들것인가.
 1. 원래 리스트를 유지하는 방법
-'''
+~~~python
 L2 = sorted(L)
     # 정렬 순서를 반대로 만들기
 L2 = sorted(L, reverse=True)
+~~~
 
-'''
 2. 해당 리스트를 정렬된 리스트로 만들기
-'''python
+~~~python
 L.sort()
     # 정렬 순서를 반대로 만들
 L.sort(reverse=True)
-'''
+~~~
+
 대문자는 소문자보다 우선한다. 
 
 ## 문자열 길이 순으로 하려면? 정렬에 이용하는 키를 지정하자!
-'''
+~~~python
 sorted(L, key=lambda x: len(x))
-'''
+~~~
+
 상대적인 순서는 정렬 이후에도 변하지 않는다.
 
 다음과 같은 응용도 가능하다. 
 
-'''
+~~~python
 L = [
     {'name':'Alice','age':25},
     {'name':'Bob','age':24}
 ]
 
 L.sort(key = lambda x: x['name'])
-'''
+~~~
 
  
