--- a/_posts/2020-12-01-AlgoStudy-02.md
+++ b/_posts/2020-12-01-AlgoStudy-02.md
@@ -14,7 +14,7 @@ tags: [algorithm,python]
 comments: true
 ---
   
-오늘은 연결리스트에 대해 알아봅시다.
+오늘은 연결리스트에 대해 알아보자.
 
   
   
@@ -86,7 +86,7 @@ def traverse(self):
 ### 원소를 삽입하기  
 
 * 주의  
-    (1) 삽입하려는 위치가 가장 앞이거나 가장 끝일 때  
+    삽입하려는 위치가 가장 앞이거나 가장 끝일 때  
     head 와 tail 조정 유의  
 
 ~~~python
@@ -116,7 +116,7 @@ def insertAt(self, pos, newNode):
 
 ### 원소를 삭제하기  
 
-* 주의 
+* 주의  
     삭제하려는 node가 맨 앞이거나 맨 끝일 때  
     노드가 하나만 있을 때   
 
@@ -228,7 +228,7 @@ def insertAt(self, pos, newNode):
 
 ### 원소의 삭제  
 
-* 주의
+* 주의  
     prev가 마지막 node 일 때 -> None을 리턴하자  
     리스트 맨 끝 노드를 삭제할 때 -> tail 조정  
 
