add algo03 and edit algo-02

--- a/_posts/2020-12-01-AlgoStudy-02.md
+++ b/_posts/2020-12-01-AlgoStudy-02.md
@@ -2,12 +2,12 @@
 published: true
 layout: single
 title:  "[algorithm][python] 효율을 고려한 코드 공부 2. 연결리스트(Linked Lists)"
-# header:
-#   overlay_image: /images/unsplash-image-1.jpg
-#   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
-#   actions:
-#     - label: "Learn more"
-#       url: "https://unsplash.com"
+header:
+  overlay_image: /images/unsplash-image-1.jpg
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "Learn more"
+      url: "https://unsplash.com"
       
 categories: [study]
 tags: [algorithm,python]
@@ -157,10 +157,12 @@ def concat(self, L):
 ~~~
 
 ## 연산들이 효율적인가?  
-지금까지 구현한 코드는 getAt이라는 O(n)의 시간 복잡도를 지닌 연산을 이용하기 때문에 매번 삽입 삭제에서 O(n)의 시간 복잡도를 가질 수 밖에 없다.  
+지금까지 구현한 코드는 getAt이라는 O(n)의 시간 복잡도를 지닌 연산을 이용한다.  
+때문에 매번 삽입 삭제에서 O(n)의 시간 복잡도를 가질 수 밖에 없다.  
 
 ## 앞에 더미 노드를 지니고 있는 연결 리스트  
-다음 코드로 앞서 구현한 것과는 조금 다른 앞에 더미노드가 추가된 형태의 연결리스트를 구현하면 어떤 일이 일어나는지 살펴보자.  
+다음 코드로 앞서 구현한 것과는 조금 다른 앞에 더미노드가 추가된 형태의 연결리스트를 구현해보자.  
+더미 노드를 추가하면 쓰이지 않는 노드가 하나 생기지만 데이터를 담고 있는 모든 노드의 연결 구성이 같아지므로 코드를 좀 더 효율적으로 줄일 수 있게 되는 것을 볼 수 있다. 
 ~~~python
 class LinkedList:
     def __init__(self):
