--- a/_posts/2020-12-02-AlgoStudy-05.md
+++ b/_posts/2020-12-02-AlgoStudy-05.md
@@ -7,14 +7,14 @@ header:
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   actions:
     - label: "Learn more"
-      url: "https://unsplash.com"
+      url: "https://google.com"
       
 categories: [study]
 tags: [algorithm,python,programmers,sort]
 comments: true
 ---
 
-## comparator를 이용한 정렬과 lambda를 이용한 정렬을 모두 살펴볼 수 있습니다. 
+### comparator를 이용한 정렬과 lambda를 이용한 정렬을 모두 살펴볼 수 있습니다. 
 
 
 ### 문제
@@ -31,7 +31,7 @@ comments: true
   
 ### 입출력 예
 |numbers|return|
-|-------|-------|
+|---|---|
 |[6, 10, 2]|6210|
 |[3, 30, 34, 5, 9]|9534330|
   
@@ -56,7 +56,7 @@ def solution(numbers):
 ~~~
 
 
-다른풀이
+### 다른풀이
 
 ~~~py
 def solution(numbers):
