change name of posts

--- a/_posts/2020-11-30-AlgoStudy-01.md
+++ b/_posts/2020-11-30-AlgoStudy-01.md
@@ -1,16 +1,16 @@
 ---
 published: true
 layout: single
-title:  "[algorithm][python] 효율을 고려한 코드 공부 1."
-# header:
-#   overlay_image: /images/unsplash-image-1.jpg
-#   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
-#   actions:
-#     - label: "Learn more"
-#       url: "https://unsplash.com"
+title:  "[python] 코드 공부 : array와 sort 다루기 "
+header:
+  overlay_image: /images/unsplash-image-1.jpg
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "Learn more"
+      url: "https://google.com"
       
 categories: [study]
-tags: [algorithm,python]
+tags: [algorithm,python,arrays,sort]
 comments: true
 ---
   
