--- a/_posts/2020-12-01-AlgoStudy-02.md
+++ b/_posts/2020-12-01-AlgoStudy-02.md
@@ -1,16 +1,16 @@
 ---
 published: true
 layout: single
-title:  "[algorithm][python] 효율을 고려한 코드 공부 2. 연결리스트(Linked Lists)"
+title:  "[algorithm][python] 연결리스트(Linked Lists)"
 header:
   overlay_image: /images/unsplash-image-1.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   actions:
     - label: "Learn more"
-      url: "https://unsplash.com"
+      url: "https://google.com"
       
 categories: [study]
-tags: [algorithm,python]
+tags: [algorithm,python,linked list]
 comments: true
 ---
   
