--- a/_posts/2020-12-09-2-lsm.md
+++ b/_posts/2020-12-09-2-lsm.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: single
-title:  "Basic! 인공지능 수학 part 5: 최소재곱법"
+title:  "Basic! 인공지능 수학 part 5: 최소제곱법"
 header:
   overlay_image: /images/unsplash-image-1.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
