--- a/_posts/2020-12-09-2-lsm.md
+++ b/_posts/2020-12-09-2-lsm.md
@@ -14,6 +14,8 @@ tags: [programmers, AI, math, linear]
 comments: true
 ---
 
+Basic! 인공지능 수학 다섯 번째 시간으로 최소제곱법에 대해 알아보도록 합시다. 
+
 ## 집합과 공간 
 
 집합(set)은 임의의 원소(element)를 수집하여 만든 모음입니다.
