edit and add posts

--- a/_posts/2020-12-09-2-lsm.md
+++ b/_posts/2020-12-09-2-lsm.md
@@ -7,7 +7,7 @@ header:
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   actions:
     - label: "Learn more"
-      url: "https://en.wikipedia.org/wiki/Gaussian_elimination"
+      url: "https://en.wikipedia.org/wiki/Least_squares"
       
 categories: [AI math_basic]
 tags: [programmers, AI, math, linear]
