--- a/_posts/2020-12-10-2-provar.md
+++ b/_posts/2020-12-10-2-provar.md
@@ -71,3 +71,48 @@ $$Cov(X,Y) = E[XY] - E[X]E[Y]$$
 
 $$Corr(X,Y) = \frac{Cov(X,Y)}{/sigma_X/sigma_Y} $$
 
+## 몇가지 특별한 확률분포
+
+### 이항분포 
+
+![](/images/2020-12/orthogonal/1.png)  
+![](/images/2020-12/orthogonal/2.png)
+
+위 문제에서 등호가 포함되는지 안되는지는 아주 중요합니다!
+cdf는 $-\infty$보다 크고 주어진 값보다 작은 확률을 구할 때 사용합니다.  
+('{}보다 작거나 같은 값'에서 {}, 베르누이 시행횟수, 확률 p)를 파라미터로 받습니다.
+
+아래 코드는 평균과 분산을 각각 리턴합니다. 
+![](/images/2020-12/orthogonal/3.png)  
+
+
+### 정규분포  
+
+지금까지 본 분포는 모두 이산확률분포였습니다.  
+이제 연속적인 확률 변수의 분포를 살펴봅시다.  
+
+![](/images/2020-12/orthogonal/4.png)  
+
+정규분포는 확률 밀도 함수가 다음과 같이 생겼습니다.  
+
+$$ f(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{1}{2}(\frac{x-\mu}{\sigma})^2}$$
+
+$\mu$와 $\sigma$가 정규분포의 모양을 결정합니다.  
+평균이 0이고 표준편차가 1이면 **표준 정규분포**라 합니다.
+
+![](/images/2020-12/orthogonal/5.png)  
+![](/images/2020-12/orthogonal/6.png)
+
+
+### 포아송 분포 (poisson distribution)
+
+![](/images/2020-12/orthogonal/7.png)  
+![](/images/2020-12/orthogonal/8.png)  
+![](/images/2020-12/orthogonal/9.png)
+
+
+### 지수분포 (exponential distribution)
+
+![](/images/2020-12/orthogonal/10.png)  
+![](/images/2020-12/orthogonal/11.png)  
+![](/images/2020-12/orthogonal/12.png)
