--- a/_posts/2020-12-10-3-visitLen.md
+++ b/_posts/2020-12-10-3-visitLen.md
@@ -26,9 +26,9 @@ comments: true
 
 ## 풀이 
 
-분기를 어레이와 딕셔너리를 이용하면 이렇게 깔끔하게 짤 수 있었네요.
-set()을 쓴 것도 포인트입니다. 
-오늘도 코딩스킬 한가지를 더 배워갑니다. ㅎㅎㅎ
+분기를 어레이와 딕셔너리를 이용해서 이렇게 깔끔하게 짤 수 있었습니다.  
+set()을 쓴 것도 포인트입니다.  
+
 
 ~~~ py
 def solution(dirs):
