--- a/_posts/2020-12-10-2-provar.md
+++ b/_posts/2020-12-10-2-provar.md
@@ -14,7 +14,7 @@ tags: [programmers, AI, math, statistics]
 comments: true
 ---
 
-Basic! 인공지능 수학 일곱 번째 시간으로 확률분포에 대해 알아보도록 합시다. 
+Basic! 인공지능 수학 여덟 번째 시간으로 확률분포에 대해 알아보도록 합시다. 
 
 ## 학률분포
 
