--- a/_posts/2020-12-22-sshErr.md
+++ b/_posts/2020-12-22-sshErr.md
@@ -9,8 +9,8 @@ header:
     - label: "노트북 보러가기"
       url: "https://www.kaggle.com/byeongheonkang/explore-pokemon-data"
       
-categories: [EDA]
-tags: [EDA, kaggle, study, programmersAI]
+categories: [study]
+tags: [ssh, study, programmersAI]
 comments: true
 ---
 
