edit til category

--- a/_posts/2021-01-14-til1.md
+++ b/_posts/2021-01-14-til1.md
@@ -2,7 +2,6 @@
 published: true
 layout: single
 title:  "[TIL] 21/01/14"
-permalink: /categories/til
 header:
   overlay_image: /images/unsplash-image-1.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
@@ -14,7 +13,7 @@ categories: [TIL]
 comments: true
 ---
 
-## 블로그 TIL 카테고리 추가 
+# 블로그 개편 : TIL 카테고리 추가  
 
 학습기록을 프로젝트나 강의 단위로 하다보니 포스팅 주기가 점점 길어졌습니다. 
 
