--- a/_posts/2021-01-14-til.md
+++ b/_posts/2021-01-14-til.md
@@ -21,3 +21,15 @@ comments: true
 이에 하루하루 배운 것을 간단한 일기 형식으로 남길 수 있는  
 카테고리를 블로그에 새로 만들게 됐습니다. 
 
+# precision 과 recall 
+
+accuracy 만 높다고 해서 좋은 모델이 아닙니다.  
+분류문제의 경우 목표값의 분포가 불균형하면 안 좋은 모델이라 하더라도  
+accuracy가 높을 수 있습니다. 
+
+이런 경우 precision(정밀도) 과 recall(재현율)을 분석해봐야 합니다.  
+precision은 맞다고 예측한 것들 중 실제로 맞은 비율를 의미하고,  
+recall은 실제로 맞는 것들 중 예측이 맞은 비율을 의미합니다.
+
+precision과 recall을 높이기 위한 방법으로는 Error case들을 분석하는 방법이 있습니다.  
+
