--- a/_posts/2021-01-15-til.md
+++ b/_posts/2021-01-15-til.md
@@ -18,10 +18,11 @@ comments: true
 
 # 웹 크롤링 및 키워드 분석 
 
-나무위키의 나무뉴스의 텍스트를 크롤링을 진행해보고  
-konlpy를 이용해 키워드를 추출하고 분석해보는 작업을 했습니다. 
+나무위키-나무뉴스의 텍스트로 크롤링을 진행해봤습니다.  
+konlpy를 이용해 키워드를 추출한 뒤 분석해보는 작업을 했습니다. 
 
-프로젝트의 결과로 pytagcloud 를 이용해 이미지를 만들어 냅니다.
+프로젝트의 결과는 최종적으로 pytagcloud를 이용해  
+키워드 관련 워드크라우드 이미지를 만드는 것 입니다.
 
 가상환경에서 konlpy를 쓰는데 이슈가 있었습니다.  
 konlpy의 jvm을 수정 해줌으로써 이슈를 해결할 수 있었습니다.  
