--- a/_posts/2021-01-16-til.md
+++ b/_posts/2021-01-16-til.md
@@ -30,7 +30,7 @@ multi label은 구하고자 하는 데이터가 여러개의 label로 동시에 
 이를 구분하는 것은 multiclass문제 입니다.  
 그러나 성별이외에 학생인지 아닌지 판별하는 문제를 추가한다면 같은 성별이더라도 학생일 수도 아닐 수도 있습니다.  
 이처럼 한 사람이 여러개의 특성을 동시에 가지는 경우가 발생합니다. 
-이러한 경우 multilabel 문제라 할 수 있습니다.  
+이를 판별해야 할 경우 multilabel 문제라 할 수 있습니다.  
 
 # 클래스 추가 
 구하고자 하는 클래스 외에 다른 상관없는 클래스들을 추가해줬을 경우 피처를 더 잘 학습하는 경우가 있습니다. 관련 주제로
