edit & add post

--- a/_posts/2021-01-15-til.md
+++ b/_posts/2021-01-15-til.md
@@ -10,7 +10,7 @@ header:
       url: ""
       
 categories: [TIL]
-tags: []
+tags: [programmers]
 comments: true
 ---
 
@@ -22,7 +22,7 @@ comments: true
 konlpy를 이용해 키워드를 추출한 뒤 분석해보는 작업을 했습니다. 
 
 프로젝트의 결과는 최종적으로 pytagcloud를 이용해  
-키워드 관련 워드크라우드 이미지를 만드는 것 입니다.
+키워드 관련 워드클라우드 이미지를 만드는 것 입니다.
 
 가상환경에서 konlpy를 쓰는데 이슈가 있었습니다.  
 konlpy의 jvm을 수정 해줌으로써 이슈를 해결할 수 있었습니다.  
