--- a/_posts/2021-01-18-til.md
+++ b/_posts/2021-01-18-til.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: single
-title:  "[TIL] 21/01/16"
+title:  "[TIL] 21/01/18"
 header:
   overlay_image: /images/unsplash-image-1.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
@@ -10,7 +10,7 @@ header:
       url: ""
       
 categories: [TIL]
-tags: []
+tags: [programmers]
 comments: true
 ---
 
