--- a/_posts/2021-01-14-til.md
+++ b/_posts/2021-01-14-til.md
@@ -10,7 +10,7 @@ header:
       url: "https://devinlife.com/howto%20github%20pages/category-tag/"
       
 categories: [TIL]
-tags: []
+tags: [programmers]
 comments: true
 ---
 
