--- a/_posts/2021-01-20-Algo.md
+++ b/_posts/2021-01-20-Algo.md
@@ -97,6 +97,40 @@ def solution(healths, items):
 
 이처럼 heap을 이용하면 후보들을 계속 sorting 해가면서 우선순위 큐를 활용할 수 있습니다. 
 
+&nbsp;
+
+# 해설 답안
+
+1. 체력을 오름차순으로 정렬하고 O(h log h)  
+2. 루프를 돌면서 HP 100 이상이라는 조건을 만족하는 것들 중  
+가장 공격력을 많이 올려주는 것을 선택 O(i)  
+3. 선택하고나면 해당 아이템 제거 O(i)  
+
+정렬은 제외하더라도 루프와 아이템 제거에서 O($i^2$) 만큼 시간복잡도가 소요되기 때문에 효율성 테스트에서 틀립니다.  
+그러므로 힙을 사용해 해결을 진행합니다. 
+
+```py
+from heapq import heapify, heappush, heappop
+
+def solution(healths, items):
+    healths.sort() # 체력을 오름차순으로 정렬
+    items = sorted([(item[1], item[0], index+1) for index, item in enumerate(items)]) # 깎는 체력 순으로 정렬
+    answer = []
+    heap = []
+
+    for health in healths: # 제일 작은 체력부터 루프
+        while items: # 아이템 루프
+            debuff, buff, index = items[0] # 가장 깎는 체력이 낮은 아이템
+            if health - debuff < 100: # 조건이 안맞으면 루프 종료
+                break
+            items.pop(0) # 어차피 다음 체력에선 무조건 가능하기 때문에 이 시점에서 제거합니다. 여기서 deque를 사용해도 되겠죠?
+            heappush(heap, (-buff, index)) # 힙에 추가합니다
+        if heap: # 힙이 비어있지 않으면
+            _, index = heappop(heap)
+            answer.append(index) # 답 리스트에 추가합니다.
+
+    return sorted(answer)
+```
 
 &nbsp;
 
