--- a/_posts/2020-12-01-AlgoStudy-02.md
+++ b/_posts/2020-12-01-AlgoStudy-02.md
@@ -10,7 +10,7 @@ header:
       url: "https://google.com"
       
 categories: [study]
-tags: [algorithm,python,linked list]
+tags: [algorithm,programmers]
 comments: true
 ---
   
