--- a/_posts/2020-12-01-AlgoStudy-03.md
+++ b/_posts/2020-12-01-AlgoStudy-03.md
@@ -10,7 +10,7 @@ header:
       url: "https://unsplash.com"
       
 categories: [study]
-tags: [algorithm,python]
+tags: [algorithm,programmers]
 comments: true
 ---
 
