--- a/_posts/2020-12-13-1-slicing.md
+++ b/_posts/2020-12-13-1-slicing.md
@@ -10,7 +10,7 @@ header:
       url: "https://stackoverflow.com/questions/53738114/why-is-it-that-you-can-slice-a-list-past-the-total-index-count-but-you-cant-dir"
       
 categories: [study]
-tags: [algorithm,python,programmers,slicing]
+tags: [algorithm,programmers]
 comments: true
 ---
 
