--- a/_posts/2020-12-16-JSON2csv.md
+++ b/_posts/2020-12-16-JSON2csv.md
@@ -10,7 +10,7 @@ header:
       url: "https://google.com"
       
 categories: [study]
-tags: [python,JSON,csv,converter]
+tags: [study]
 comments: true
 ---
 
