--- a/_posts/2020-12-22-sshErr.md
+++ b/_posts/2020-12-22-sshErr.md
@@ -10,7 +10,7 @@ header:
       url: "https://www.kaggle.com/byeongheonkang/explore-pokemon-data"
       
 categories: [study]
-tags: [ssh]
+tags: [study]
 comments: true
 ---
 
