--- a/_posts/2020-12-28-01-dijkstra.md
+++ b/_posts/2020-12-28-01-dijkstra.md
@@ -10,7 +10,7 @@ header:
       url: "https://www.fun-coding.org/Chapter20-shortest-live.html"
       
 categories: [study]
-tags: [algorithm,python,programmers,heap,dijkstra]
+tags: [algorithm,programmers]
 comments: true
 ---
 
