--- a/_posts/2021-01-20-Algo.md
+++ b/_posts/2021-01-20-Algo.md
@@ -10,7 +10,7 @@ header:
       url: "https://www.daleseo.com/python-heapq/"
       
 categories: [study]
-tags: [algorithm,python,programmers,sort,heap]
+tags: [algorithm,programmers]
 comments: true
 ---
 
