--- a/_posts/2020-11-30-AlgoStudy-01.md
+++ b/_posts/2020-11-30-AlgoStudy-01.md
@@ -10,7 +10,7 @@ header:
       url: "https://google.com"
       
 categories: [study]
-tags: [algorithm,python,arrays,sort]
+tags: [algorithm,programmers]
 comments: true
 ---
   
