--- a/_posts/2020-12-02-AlgoStudy-05.md
+++ b/_posts/2020-12-02-AlgoStudy-05.md
@@ -10,7 +10,7 @@ header:
       url: "https://google.com"
       
 categories: [study]
-tags: [algorithm,python,programmers,sort]
+tags: [algorithm,programmers]
 comments: true
 ---
 
