--- a/_posts/2020-12-10-3-visitLen.md
+++ b/_posts/2020-12-10-3-visitLen.md
@@ -10,7 +10,7 @@ header:
       url: "https://google.com"
       
 categories: [study]
-tags: [algorithm,python,programmers,dict,set]
+tags: [algorithm,programmers]
 comments: true
 ---
 
