--- a/_posts/2020-12-19-tdd.md
+++ b/_posts/2020-12-19-tdd.md
@@ -10,7 +10,7 @@ header:
       url: "https://www.kaggle.com/byeongheonkang/explore-pokemon-data"
       
 categories: [EDA]
-tags: [EDA, kaggle, study, programmersAI]
+tags: [kaggle, study, programmers]
 comments: true
 ---
 
