edit sticky contents

--- a/_posts/2021-01-22-MNIST.md
+++ b/_posts/2021-01-22-MNIST.md
@@ -15,6 +15,7 @@ comments: true
 
 toc: true
 toc_label: "Contents"
+toc_sticky: true
 # toc_icon: "heart"  # corresponding Font Awesome icon name (without fa prefix)
 ---
 
