--- a/_posts/2021-01-25-til8.md
+++ b/_posts/2021-01-25-til8.md
@@ -20,6 +20,13 @@ comments: true
 
 &nbsp;
 
+# 무료 도메인 서비스 이용해서 인스턴스 연결시키기 
+
+무료 도메인 서버를 이용해서  
+기존 소개페이지를 담고 있던 AWS인스턴스와 도메인을 연결시켰습니다. 
+
+https://ariels1996.github.io/web/freeDomain/
+
 # DMLP와 CNN의 비교 
 
 * DMLP
