--- a/_posts/2021-01-26-til9.md
+++ b/_posts/2021-01-26-til9.md
@@ -1,3 +1,24 @@
+---
+published: true
+layout: single
+title:  "[TIL] 21/01/26"
+header:
+  overlay_image: /images/unsplash-image-1.jpg
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "Learn more"
+      url: ""
+      
+categories: [TIL]
+tags: [programmers]
+comments: true
+---
+
+&nbsp;
+
+&nbsp;
+
+오늘의 TIL
 
 # 여러 이미지 처리 신경망의 성공 이유
 
