--- a/_posts/2021-01-26-til9.md
+++ b/_posts/2021-01-26-til9.md
@@ -73,8 +73,8 @@ comments: true
 
 |모델|학습 단계가 할 일| 예측 단계가 할 일| 지도 여부|
 |---|---|---|---|
-|분별 모델| $P(y \textpipe x)$ 추정 | $f: x -> y$ | 지도 학습|
-|생성 모델| $P(x)$ 또는 $P(x \textpipe y)$, $P(x, y)$ 추정| $f: 씨앗 -> x$ 또는 $f: 씨앗, y -> x$, $f: 씨앗 -> x,y$ |비지도학습|
+|분별 모델| $P(y \shortmid x)$ 추정 | $f: x -> y$ | 지도 학습|
+|생성 모델| $P(x)$ 또는 $P(x \shortmid y)$, $P(x, y)$ 추정| $f: 씨앗 -> x$ 또는 $f: 씨앗, y -> x$, $f: 씨앗 -> x,y$ |비지도학습|
 
 생성모델은 데이터를 추론하는데 집중합니다. 
 
