--- a/_posts/2021-01-26-til9.md
+++ b/_posts/2021-01-26-til9.md
@@ -61,7 +61,7 @@ comments: true
 ## ResNet
 - residual learning
     입력을 연산된 결과와 연결시켜 연결망이 학습한 부분을 더 신경쓰도록 만드는 기법 
-    $y = \uptau(F(x) + x)$
+    $y = \tau(F(x) + x)$
 - 깊은 신경망도 최적화가 가능 
     단순 구조의 변경으로 매개변수 수에 영향 X
 - 전역 평균 풀링 사용
@@ -73,8 +73,8 @@ comments: true
 
 |모델|학습 단계가 할 일| 예측 단계가 할 일| 지도 여부|
 |---|---|---|---|
-|분별 모델| $P(y \shortmid x)$ 추정 | $f: x -> y$ | 지도 학습|
-|생성 모델| $P(x)$ 또는 $P(x \shortmid y)$, $P(x, y)$ 추정| $f: 씨앗 -> x$ 또는 $f: 씨앗, y -> x$, $f: 씨앗 -> x,y$ |비지도학습|
+|분별 모델| $P(y \mid x)$ 추정 | $f: x -> y$ | 지도 학습|
+|생성 모델| $P(x)$ 또는 $P(x \mid y)$, $P(x, y)$ 추정| $f: 씨앗 -> x$ 또는 $f: 씨앗, y -> x$, $f: 씨앗 -> x,y$ |비지도학습|
 
 생성모델은 데이터를 추론하는데 집중합니다. 
 
