--- a/_posts/2021-01-27-deepOpt1.md
+++ b/_posts/2021-01-27-deepOpt1.md
@@ -75,7 +75,7 @@ $$BCE(x)=−1/N\sum\limits_{i=1}^N y_{i}\log(h(x_i;\theta))+(1−y_i)\log(1−h(
 하나의 클래스로만 분류되어야 한다면 음의 로그우도 함수를 사용할 수 있습니다.  
 이것은 정답에 해당하는 loss만 추출하는 함수입니다.  
 
-$$ e = -\log_{2}o_y
+$$ e = -\log_{2}o_y $$
 
 - 소프트맥스와 로그우도 
     - 소프트맥스는 최댓값이 아닌 값을 억제해서 0에 가깝게 만든다는 의도를 내포합니다.  
