--- a/_posts/2021-03-01-til19.md
+++ b/_posts/2021-03-01-til19.md
@@ -24,7 +24,8 @@ comments: true
 
 Ajax 크롤링 관련해서 api를 이용하는 부분을 찾아보고 적용했습니다.  
 
+크롤링을 적용함에 있어 header요소가 중요하다는 것을 알게 됐습니다.  
+브라우저가 아닌 파이썬 프로그램이 해당 json을 호출하는 것을 막아둔 사이트가 많고, 또한 해당 페이지를 요청하기 위해서는 특정 페이지가 보냈음을 확인하도록 되어있는 사이트들이 있습니다.
 
-
-
+정상적인 수행이 되었을 경우 Request Headers를 살펴보고 referer나 api key와 같은 항목을 헤더에 넣어서 request 요청을 보내는 것이 중요합니다.  
 
