--- a/_posts/2021-03-28-81.md
+++ b/_posts/2021-03-28-81.md
@@ -28,9 +28,8 @@ RuntimeError: Error(s) in loading state_dict for BertModel:
 
 # 에러 해결 방법 
 
-model.load_state_dict를 할 때 strict하게 로딩해오지 않고 가능한것만 로딩해올수있는 좀더 flexible한 option을 적용시켜
-습니다. 
-에러에 나온 Transformer.py의 41번째 라인을 다음과 같이 수정해줬습니다. 
+model.load_state_dict를 할 때 strict하게 로딩해오지 않게 만들었습니다. 현재 가능한것만 체크해서 로딩해올수있는 option을 적용 시켰습니다.  
+에러에 나온 Transformer.py의 41번째 라인을 다음과 같이 수정했습니다. 
 
 ```python
 # self.auto_model.load_state_dict(torch.load(model_name_or_path+'/result.pt'))
