--- a/_posts/2021-04-13-88.md
+++ b/_posts/2021-04-13-88.md
@@ -6,10 +6,68 @@ header:
   overlay_image: /images/unsplash-image-1.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   actions:
-    - label: "Learn more"
-      url: ""
+    - label: "See more"
+      url: "https://www.acmicpc.net/problem/2206"
       
 categories: [study]
 tags: [algorithm, bfs]
 comments: true
 ---
+
+상태 배열에 조건 추가하기 
+
+&nbsp;
+
+&nbsp;
+## 문제
+
+N×M의 행렬로 표현되는 맵이 있다. 맵에서 0은 이동할 수 있는 곳을 나타내고, 1은 이동할 수 없는 벽이 있는 곳을 나타낸다. 당신은 (1, 1)에서 (N, M)의 위치까지 이동하려 하는데, 이때 최단 경로로 이동하려 한다. 최단경로는 맵에서 가장 적은 개수의 칸을 지나는 경로를 말하는데, 이때 시작하는 칸과 끝나는 칸도 포함해서 센다.
+
+만약에 이동하는 도중에 한 개의 벽을 부수고 이동하는 것이 좀 더 경로가 짧아진다면, 벽을 한 개 까지 부수고 이동하여도 된다.
+
+한 칸에서 이동할 수 있는 칸은 상하좌우로 인접한 칸이다.
+
+맵이 주어졌을 때, 최단 경로를 구해 내는 프로그램을 작성하시오.
+
+
+&nbsp;
+## 나의 풀이 
+
+```py
+import sys
+from collections import deque
+
+input = sys.stdin.readline
+dx = [1, -1, 0, 0]
+dy = [0, 0, -1, 1]
+
+
+# w가 1일 경우 벽을 뚫을 수 있음 
+def bfs():
+    q = deque()
+    q.append([0, 0, 1])
+    visit = [[[0] * 2 for i in range(m)] for i in range(n)]
+    visit[0][0][1] = 1
+    while q:
+        a, b, w = q.popleft()
+        if a == n - 1 and b == m - 1:
+            return visit[a][b][w]
+        for i in range(4):
+            x = a + dx[i]
+            y = b + dy[i]
+            if 0 <= x < n and 0 <= y < m:
+                if s[x][y] == 1 and w == 1:
+                    visit[x][y][0] = visit[a][b][1] + 1
+                    q.append([x, y, 0])
+                elif s[x][y] == 0 and visit[x][y][w] == 0:
+                    visit[x][y][w] = visit[a][b][w] + 1
+                    q.append([x, y, w])
+    return -1
+
+
+n, m = map(int, input().split())
+s = []
+for i in range(n):
+    s.append(list(map(int, list(input().strip()))))
+print(bfs())
+```
