--- a/_posts/2021-04-15-89.md
+++ b/_posts/2021-04-15-89.md
@@ -31,5 +31,5 @@ comments: true
 LDA(잠재 디리클레 할당)는 gensim에서 제공하는 라이브러리로 손쉽게 구현할 수 있습니다.  
 현제는 토픽모델들에 대한 공부를 진행중에 있습니다.  
 
-토픽 모델링을 이전에 살펴보았던 음식 리뷰데이터에 적용하고 flask로 살펴보는 앱을 만들어볼 생각입니다.
+토픽 모델링을 이전에 살펴보았던 음식 리뷰데이터에 적용하고 flask로 구동하는 앱을 만들어볼 생각입니다.
 
