--- a/_posts/2021-04-17-90.md
+++ b/_posts/2021-04-17-90.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: single
-title:  "[Recommendation System] SVD & 딥러닝 추천 엔진"
+title:  "[Recommendation System] SVD & 오토인코더 기반 추천 엔진"
 header:
   overlay_image: /images/unsplash-image-2.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
@@ -19,6 +19,69 @@ toc_sticky: true
 # toc_icon: "heart"  # corresponding Font Awesome icon name (without fa prefix)
 ---
 
-&nbsp;
+모델 기반 협업 필터링을 살펴봅시다. 
 
 &nbsp;
+
+# SVD 알고리즘 
+
+## 사용자/아이템 기반 협업 필터링의 문제점 
+- 확장성(scalability): 큰 행렬 계산은 여러모로 쉽지가 않습니다. 
+    - 아이템 기반으로 가면 계산량이 줄어듭니다. 
+    - Spark를 사용하면 큰 행렬 계산이 가능합니다. 
+- 부족한 데이터
+    - 많은 사용자들은 충분한 수의 리뷰를 남기지 않습니다. 
+- 해결책
+    - 모델 기반 협업 필터링
+        머신러닝 기술을 사용해 평점을 예측하고 입력은 사용자-아이템 평점 행렬을 사용합니다.  
+        행렬 분해(Matrix Factorization) 방식과 딥러닝 방식이 있습니다. 
+
+## 행렬 분해 방식
+- 협업 필터링 문제를 사용자-아이템 평점 행렬을 채우는 문제로 재정의 해봅니다. 
+    - 사용자 혹은 아이템을 적은 수의 차원으로 축소함으로써 문제를 간단화 합니다. 
+- 가장 많이 사용되는 행렬 분해 방식은 다음과 같습니다. 
+    - PCA(Principal Component Analysis)
+    - SVD(Singular Vector Decomposition) 혹은 SVD++ 
+
+## PCA(Principal Component Analysis)
+차원을 축소하되 원래 의미는 최대한 그대로 간직하고자 하는 방식입니다.  
+예를 들어 유저와 영화의 이름으로 이루어진 행렬이 있다 가정했을 때 영화들이 가지고 있는 공통적인 특징(장르, 연도)들로 차원을 축소하는 방법이 있습니다.  
+행렬 자체의 크기를 줄일 수 있다는 장점이 있지만 차원 축소에 사용된 방식이 기준이 되기 때문에 유의해야 합니다. 
+
+## SVD(Singular Vector Decomposition)
+2개 혹은 3개의 작은 행렬의 곱으로 단순화 시키는 과정으로 행렬을 분해합니다. 일종의 소인수 분해라고 생각할 수 있습니다.  
+- 사용자-아이템 행렬을 훨씬 작은 3개의 행렬($U, \sigma, V^t$)로 나눠 표현합니다. 
+    - U: 사용자를 나타내는 훨씬 작은 행렬입니다.
+    - $\sigma$: U의 특정 부분의 시그널을 증폭시켜주는 대각행렬 입니다. 행렬을 살펴보면 덜 중요한 부분을 파악할 수 있습니다.
+    - $V^t$: 아이템을 나타내는 훨씬 작은 행렬입니다.
+
+## SVD++
+Netflix contest에서 고안된 추천방식입니다. 
+- SVD나 PCA는 완전하게 채워져있는 행렬의 차원수를 줄이는 방식입니다. 
+- SVD++는 sparse 행렬이 주어졌을 때 비어있는 셀들을 채우는 방법을 학습하는 알고리즘입니다. 
+    - 채워진 셀들의 값을 최대한 비슷하게 채우는 방식으로 학습합니다. 보통 RMSE(route mean square error)의 값을 최소화하는 방식으로 학습하면서 SGD를 사용합니다. 
+    - 사용자-아이템 행렬이 입력값으로 들어가면 $U, \sigma, V^t$를 찾아냅니다. 
+- surprise 라이브러리 혹은 scikit-learn의 TruncatedSVD를 사용합니다. 
+
+&nbsp;
+
+# SVD 기반 추천 엔진
+surprise 라이브러리와 무비렌즈 데이터셋을 이용해서 평점을 예측하는 모델을 개발해봅시다. 
+
+실습은 colab에서 진행하고 모델의 성능 평가는 test/train 방식으로 진행합니다. 
+
+관련 파일은 github에서 보실 수 있습니다.  
+
+```py
+! pip install surprise
+```
+
+# 오토인코더
+
+오토인코더는 대표적인 비지도학습을 위한 딥러닝 모델입니다.  
+데이터의 숨겨진 구조를 발견하면서 노드의 수를 줄이는 것이 목표입니다.  
+입력 데이터에서 불필요한 특징들을 제거한 압축된 특징을 학습하려는 것입니다.  
+오토인코더의 출력은 입력을 재구축한 것입니다.  
+
+
+# 오토인코더를 이용한 인코딩 & 디코딩
