--- a/_posts/2021-04-19-91.md
+++ b/_posts/2021-04-19-91.md
@@ -86,10 +86,9 @@ mutable과 immutable 객체
 
 이는 리스트 객체가 **mutable**하기 때문입니다.  
 mutable한 객체에 * 연산을 한다면 **shallow copy**로 같은 메모리를 참조하는 객체를 생성하게 됩니다.  
+그러므로 일반적으로 사용하는 리스트를 * 연산으로 생성하면 원치않은 결과를 만들 수 있습니다!
 
-그래서 일반적으로 문제풀이에 사용하는 리스트를 * 연산으로 생성하면 원치않는 결과를 얻을 수 있습니다!
-
-반면 for문으로 생성한다면 주소의 재할당이 이루어지면서 변경된 메모리 주소에 deepcopy가 이뤄지게 됩니다.  
+반면 for문으로 생성한다면 주소의 재할당이 이루어지면서 변경된 메모리 주소에 **deepcopy**가 이뤄지게 됩니다.  
 
 &nbsp;
 
