--- a/_posts/2021-04-17-90.md
+++ b/_posts/2021-04-17-90.md
@@ -76,12 +76,119 @@ surprise 라이브러리와 무비렌즈 데이터셋을 이용해서 평점을 
 ! pip install surprise
 ```
 
+&nbsp;
+
 # 오토인코더
 
 오토인코더는 대표적인 비지도학습을 위한 딥러닝 모델입니다.  
 데이터의 숨겨진 구조를 발견하면서 노드의 수를 줄이는 것이 목표입니다.  
-입력 데이터에서 불필요한 특징들을 제거한 압축된 특징을 학습하려는 것입니다.  
-오토인코더의 출력은 입력을 재구축한 것입니다.  
+입력 데이터에서 불필요한 특징들을 제거한 압축된 특징을 학습합니다.  
+오토인코더의 출력은 입력을 재구축한 것으로서, 입력값을 최대한 비슷하게 출력하기 위한 딥러닝 모델이라 할 수 있습니다.  
 
+## 오토인코더의 구조
+- 출력층의 노드 개수와 입력층의 노드 개수가 동일해야합니다.
+- 은닉층의 노드 개수가 출력츰/입력층의 노드 개수보다 작아야합니다.
+- 이렇게 학습된 은닉층의 출력을 입력을 대신하는 데이터로 사용함으로써 데이터의 입력 크기를 줄이는 효과를 낼 수 있습니다.  
+
+&nbsp;
 
 # 오토인코더를 이용한 인코딩 & 디코딩
+
+![](/images/2021-04/90/1.png)
+
+먼저 간단한 실습을 위한 모듈들을 import 해줍니다. 
+
+```py
+import numpy as np
+import matplotlib.pyplot as plt
+from keras.layers import Input, Dense
+from keras.models import Model
+from keras.datasets import mnist
+```
+
+데이터는 keras의 mnist 데이터셋을 이용할 것입니다.  
+학습에 사용될 데이터와 검증에 사용될 데이터가 나누어져 있습니다.  
+
+```py
+(x_train, y_train), (x_test, y_test) = mnist.load_data()
+
+x_train = x_train.astype('float32') / 256
+x_test = x_test.astype('float32') / 256
+
+print(x_train.shape)
+```
+```
+Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz
+11493376/11490434 [==============================] - 0s 0us/step
+(60000, 28, 28)
+```
+
+```py
+x_train = x_train.reshape(len(x_train), 28*28)
+x_test = x_test.reshape(len(x_test), 28*28)
+
+print(x_train.shape)
+print(x_test.shape)
+```
+```
+(60000, 784)
+(10000, 784)
+```
+
+이제 딥러닝 모델을 설계해봅시다.  
+keras의 functional API를 사용하면 다음과 같이 모델을 구축할 수 있습니다.  
+각각의 레이어들의 input을 다른 레이어들의 출력으로 설정할 수 있습니다.
+```py
+input_layer = Input(shape=(784,))
+encoded = Dense(64, activation='relu')(input_layer)
+decoded = Dense(784, activation='sigmoid')(encoded)
+```
+
+```py
+autoencoder = Model(input_layer, decoded)
+```
+
+다음과 같이 encoder만 따로 만들 수 있습니다.  
+```py
+encoder = Model(input_layer, encoded)
+```
+
+다음은 decoder를 만드는 과정입니다. 
+```py
+input_layer_decoder = Input(shape=(64,))
+decoder_layer = autoencoder.layers[-1](input_layer_decoder)
+decoder = Model(input_layer_decoder,decoder_layer)
+```
+
+다음 코드를 통해 모델의 구조를 한눈에 볼 수 있습니다.  
+```py
+autoencoder.summary()
+```
+```
+Model: "model"
+_________________________________________________________________
+Layer (type)                 Output Shape              Param #   
+=================================================================
+input_1 (InputLayer)         [(None, 784)]             0         
+_________________________________________________________________
+dense (Dense)                (None, 64)                50240     
+_________________________________________________________________
+dense_1 (Dense)              (None, 784)               50960     
+=================================================================
+Total params: 101,200
+Trainable params: 101,200
+Non-trainable params: 0
+_________________________________________________________________
+```
+다음과 같이 학습을 진행할 수 있습니다.  
+입력이 다시 label 정보에 그대로 쓰입니다.  
+```py
+autoencoder.compile(optimizer='adam', loss='binary_crossentropy')
+autoencoder.fit(x_train,x_train, epochs=50, batch_size=256, shuffle=True, validation_data=(x_test,x_test))
+```
+
+학습된 인코더와 디코더를 통해서 이미지들이 어떻게 임베딩되고 다시 원본으로 돌아가는지 살펴봅시다.  
+pyplot을 이용해서 받아온 텐서를 2차원 이미지로 변환시키는 함수를 작성합니다.  
+결과는 다음과 같습니다.  
+
+![](/images/2021-04/90/2.png)
