edit post and images

--- a/_posts/2021-04-17-90.md
+++ b/_posts/2021-04-17-90.md
@@ -68,13 +68,113 @@ Netflix contest에서 고안된 추천방식입니다.
 # SVD 기반 추천 엔진
 surprise 라이브러리와 무비렌즈 데이터셋을 이용해서 평점을 예측하는 모델을 개발해봅시다. 
 
-실습은 colab에서 진행하고 모델의 성능 평가는 test/train 방식으로 진행합니다. 
+영화 평가에 대한 실제 데이터셋인 무비렌즈는 미네소타 대학의 그룹렌즈(FroupLens)프로젝트에 의해 개발되었으며, https://grouplens.org/datasets/ 사이트에서 데이터를 다운받을 수 있습니다.  
+tar.gz나 zip포맷 중에 하나를 골라서 100,000개의 데이터셋을 다운 받으면 되겠습니다.
 
-관련 파일은 github에서 보실 수 있습니다.  
+실습은 colab에서 진행하고 모델의 성능 평가는 test/train 방식으로 진행합니다. 
 
 ```py
 ! pip install surprise
 ```
+
+## 데이터 로딩 및 분석
+
+```py
+from surprise import Dataset
+from surprise import Reader
+
+from collections import defaultdict
+import numpy as np
+import pandas as pd
+
+movies = pd.read_csv("경로/movies.csv")
+ratings = pd.read_csv("경로/movielens/ratings.csv")
+```
+
+![](/images/2021-04/90/3.png)
+
+```py
+movie_ratings = pd.merge(movies, ratings, left_on='movieId', right_on='movieId')
+```
+
+![](/images/2021-04/90/4.png)
+
+아이템 기반의 테이블을 보시면 데이터가 얼마나 sparse 한지 직접 확인해볼 수 있습니다.
+
+```py
+item_ratings = ratings.pivot_table(index=['userId'],columns=['movieId'],values='rating')
+```
+
+![](/images/2021-04/90/5.png)
+
+## GridSearchCV 사용해서 최적의 하이퍼파라미터 학습시키기
+
+```py
+from surprise import KNNBasic
+import heapq
+from collections import defaultdict
+
+reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)
+data = Dataset.load_from_file("ratings.csv", reader=reader)
+```
+
+```py
+from surprise import SVD
+from surprise import NormalPredictor
+from surprise.model_selection import GridSearchCV
+
+# 하이퍼 파라미터 그리드 검색을 해서 최적의 파라미터를 찾는다.
+# scikit-learn의 cv와 아주 유사함
+# n_factors: 축소 차원수 (n*n의 스케일 행렬, 가운데 행렬 크기 지정)
+# n_epochs: 전체 데이터 셋을 훈련시키는 횟수
+# lr_all: 학습률
+
+param_grid = {
+    'n_epochs' : [20, 30],
+    'lr_all' : [0.005, 0.010],
+    'n_factors' : [50, 100]
+}
+
+# 3-폴드 교차검증(cv) 사용, 비용함수는 2개 (데이터를 3개의 chunk로 나눠서 빌드하고 훈련합니다.)
+gs = GridSearchCV(SVD, param_grid, measures=['rmse','mae'],cv=3)
+gs.fit(data)
+```
+
+다음과 같은 결과를 얻을 수 있습니다.
+
+![](/images/2021-04/90/6.png)
+
+## 최고의 성능을 보인 파라미터로 훈련하고 예측하기
+
+```py
+svd = gs.best_estimator['rmse']
+
+trainset = data.build_full_trainset()
+svd.fit(trainset)
+```
+
+다음과 같이 특정 유저와 아이템을 가지고 예측을 시도해보면 결과를 얻을 수 있습니다. 
+
+![](/images/2021-04/90/7.png)
+
+## Train/Test Split으로 훈련하고 성능 평가해보기
+
+```py
+from surprise import accuracy
+from surprise.model_selection import train_test_split
+
+trainset, testset = train_test_split(data, test_size=.25)
+
+svd = SVD() # 여기서 하이퍼 파라미터는 디폴트로 들어갑니다. 
+svd.fit(trainset)
+predictions = svd.test(testset)
+
+accuracy.rmse(predictions)
+```
+테스트 셋의 데이터를 확인해보고 모델로 특정 케이스를 검증해봅시다.  
+
+![](/images/2021-04/90/8.png)
+
 
 &nbsp;
 
