add post /solve

--- a/_posts/2021-05-22-95.md
+++ b/_posts/2021-05-22-95.md
@@ -1,7 +1,7 @@
 ---
 published: true
 layout: single
-title:  "[BOJ][python] 1931 "
+title:  "[BOJ][python] 1931 회의실 배정"
 header:
   overlay_image: /images/unsplash-image-2.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
