--- a/_posts/2021-05-25-til22.md
+++ b/_posts/2021-05-25-til22.md
@@ -7,7 +7,7 @@ header:
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
   actions:
     - label: "Learn more"
-      url: ""
+      url: "https://victorydntmd.tistory.com/231"
       
 categories: [TIL]
 tags: [server]
